refactor(connectors): route admin ERP reads through connector abstraction (ADR-023, item 2)
Eliminate the last bespoke RestTemplate clients to ERP from admin-service
design-time code; all ERP data reads now flow through the governed connector
framework per ADR-023.

- Delete ErpClient + ErpDepartmentResponse.
- Add shared ErpMetadataReader: calls ConnectorService.callConnector on the
  tenant's hr-service connector, unwraps a Spring Page (content[]) or bare
  array, degrades to empty on any failure (unregistered connector, ERP down,
  unparseable body).
- DepartmentProjector (/departments) + FeelExpressionGenerator (/custody-mappings)
  consume the reader; drop vestigial tenant query params (tenant scoped via
  forwarded credential).
- Fixes a latent Page-vs-List deserialization bug that had been silently
  emptying both pickers.
- ErpMetadataReaderTest: 7 cases (Page unwrap, bare array, non-2xx, unregistered
  connector, missing credential, blank/unparseable body).